<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:weightSum="11">

    <TextView
        android:id="@+id/tvCaptionTBSNo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/sno"
        android:textColor="@color/txtColorAccent"
        android:textSize="@dimen/table_text_heading_16sp_720dp_14sp_600dp" />

    <TextView
        android:id="@+id/tvCaptionTBCustomerName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:text="@string/customer_name"
        android:textColor="@color/txtColorAccent"
        android:textSize="@dimen/table_text_heading_16sp_720dp_14sp_600dp" />

    <TextView
        android:id="@+id/tvCaptionTBTimeBooking"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:text="@string/table_for_booking"
        android:textColor="@color/txtColorAccent"
        android:textSize="@dimen/table_text_heading_16sp_720dp_14sp_600dp" />

    <TextView
        android:id="@+id/tvCaptionTBAllocateTable"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/table_no"
        android:textColor="@color/txtColorAccent"
        android:textSize="@dimen/table_text_heading_16sp_720dp_14sp_600dp" />

    <TextView
        android:id="@+id/tvCaptionTBMobileNo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:text="@string/mobile_no"
        android:textColor="@color/txtColorAccent"
        android:textSize="@dimen/table_text_heading_16sp_720dp_14sp_600dp" />

    <ImageView
        android:id="@+id/ivCaptionTBDelete"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:text="@string/delete"
        android:textColor="@color/txtColorAccent"
        android:textSize="@dimen/table_text_heading_16sp_720dp_14sp_600dp" />

</LinearLayout>
