<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_wep"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true" />

    <RelativeLayout
        android:id="@+id/lnrBillingScreen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/toolbar"
        android:background="@drawable/home_back">


        <LinearLayout
            android:id="@+id/boxTop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="40dp"
            android:orientation="horizontal"
            android:padding="5dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true">

            <TextView
                android:id="@+id/textView17"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:gravity="center_vertical|end"
                android:text="Customer GSTIN :"
                android:textSize="@dimen/text_size_14sp_720dp_10sp_600dp"
                />

            <EditText
                android:id="@+id/etCustGSTIN"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:gravity="left|center_vertical"
                android:hint="GSTIN"
                android:maxLength="15"
                android:textSize="@dimen/text_size_14sp_720dp_10sp_600dp"
                />

            <EditText
                android:id="@+id/tvSubUdfValue"
                android:layout_width="50dp"
                android:layout_height="30dp"
                android:inputType="number"
                android:text="1"
                android:textSize="11dp"
                android:visibility="gone" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:gravity="center_vertical|end"
                android:text="Customer Name :"
                android:textSize="@dimen/text_size_14sp_720dp_10sp_600dp"
                 />

            <EditText
                android:id="@+id/edtCustName"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:gravity="left|center_vertical"
                android:hint="Name"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:gravity="center_vertical|end"
                android:text="Phone No : "
                android:textSize="@dimen/text_size_14sp_720dp_10sp_600dp"
                />

            <EditText
                android:id="@+id/edtCustPhoneNo"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:layout_weight="1.06"
                android:drawableRight="@drawable/searchicon_img"
                android:gravity="left|center_vertical"
                android:hint="Mobile No"
                android:inputType="number"
                android:maxLength="10"
                android:textSize="@dimen/text_size_14sp_720dp_10sp_600dp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:gravity="center_vertical|end"
                android:text="Address : "
                android:textSize="@dimen/text_size_14sp_720dp_10sp_600dp"
                />

            <EditText
                android:id="@+id/edtCustAddress"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:gravity="left"
                android:hint="Address"
                android:textSize="@dimen/text_size_14sp_720dp_10sp_600dp"
                />

            <com.wep.common.app.views.WepButton
                android:id="@+id/btn_DineInAddCustomer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_weight="1"
                android:background="@drawable/background_btn"
                android:minHeight="40dp"
                android:onClick="AddCustomer"
                android:text="@string/add"
                android:textAllCaps="false"
                android:textSize="@dimen/button_14sp_720dp_12sp_600dp"
                android:theme="@style/WepButtonWithMarigin" />

            <EditText
                android:id="@+id/edtCustId"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:gravity="left"
                android:text="0"
                android:visibility="gone" />

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/boxContent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/boxBtn"
            android:layout_below="@+id/boxTop">

            <include
                layout="@layout/test_order_page_content_homedelivery"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true" />


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/boxBtn"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_alignParentBottom="true">

            <View
                android:id="@+id/qwd"
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="@android:color/background_dark" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentBottom="true"
                android:layout_below="@+id/qwd"
                android:layout_centerHorizontal="true"
                android:minHeight="48dp"
                android:orientation="horizontal"
                android:padding="4dp">

                <com.wep.common.app.views.WepButton
                    android:id="@+id/btn_SaveKOT"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/btn_marigin"
                    android:layout_marginRight="@dimen/btn_marigin"
                    android:layout_weight="1"
                    android:background="@drawable/background_btn"
                    android:gravity="center"
                    android:onClick="SaveKOT"
                    android:text="@string/save_kot"
                    android:textAllCaps="false"
                    android:textSize="@dimen/button_14sp_720dp_12sp_600dp"
                    android:theme="@style/WepButtonWithMarigin" />

                <com.wep.common.app.views.WepButton
                    android:id="@+id/btn_PrintKOT"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/btn_marigin"
                    android:layout_marginRight="@dimen/btn_marigin"
                    android:layout_weight="1"
                    android:background="@drawable/background_btn"
                    android:gravity="center"
                    android:onClick="printKOT"
                    android:text="@string/print_save_kot"
                    android:textAllCaps="false"
                    android:textSize="@dimen/button_14sp_720dp_12sp_600dp"
                    android:theme="@style/WepButtonWithMarigin" />

                <com.wep.common.app.views.WepButton
                    android:id="@+id/btn_PrintBill"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/btn_marigin"
                    android:layout_marginRight="@dimen/btn_marigin"
                    android:layout_weight="1"
                    android:background="@drawable/background_btn"
                    android:gravity="center"
                    android:onClick="printBILL"
                    android:text="@string/print_bill"
                    android:textAllCaps="false"
                    android:textSize="@dimen/button_14sp_720dp_12sp_600dp"
                    android:theme="@style/WepButtonWithMarigin" />

                <com.wep.common.app.views.WepButton
                    android:id="@+id/btn_PayBill"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/btn_marigin"
                    android:layout_marginRight="@dimen/btn_marigin"
                    android:layout_weight="1"
                    android:background="@drawable/background_btn"
                    android:gravity="center"
                    android:onClick="Tender"
                    android:text="@string/pay_bill"
                    android:textAllCaps="false"
                    android:textSize="@dimen/text_size_14sp_720dp_12sp_600dp"
                    android:theme="@style/WepButtonWithMarigin" />

                <com.wep.common.app.views.WepButton
                    android:id="@+id/btn_Clear"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/btn_marigin"
                    android:layout_marginRight="@dimen/btn_marigin"
                    android:layout_weight="1"
                    android:background="@drawable/background_btn"
                    android:gravity="center"
                    android:onClick="Clear"
                    android:text="@string/clear"
                    android:textAllCaps="false"
                    android:textSize="@dimen/button_14sp_720dp_12sp_600dp"
                    android:theme="@style/WepButtonWithMarigin" />


                <com.wep.common.app.views.WepButton
                    android:id="@+id/btn_DeleteBill"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/btn_marigin"
                    android:layout_marginRight="@dimen/btn_marigin"
                    android:layout_weight="1"
                    android:background="@drawable/background_btn"
                    android:gravity="center"
                    android:onClick="DeleteBill"
                    android:text="@string/delete_bill"
                    android:textAllCaps="false"
                    android:textSize="@dimen/button_14sp_720dp_12sp_600dp"
                    android:theme="@style/WepButtonWithMarigin" />


                <com.wep.common.app.views.WepButton
                    android:id="@+id/btn_Reprint"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/btn_marigin"
                    android:layout_marginRight="@dimen/btn_marigin"
                    android:layout_weight="1"
                    android:background="@drawable/background_btn"
                    android:gravity="center"
                    android:onClick="ReprintBill"
                    android:text="@string/reprint_bill"
                    android:textAllCaps="false"
                    android:textSize="@dimen/button_14sp_720dp_12sp_600dp"
                    android:theme="@style/WepButtonWithMarigin" />

                <com.wep.common.app.views.WepButton
                    android:id="@+id/btn_DeliveryStatus"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/btn_marigin"
                    android:layout_marginRight="@dimen/btn_marigin"
                    android:layout_weight="1"
                    android:background="@drawable/background_btn"
                    android:gravity="center"
                    android:onClick="KOTStatus"
                    android:text="Delivery Status"
                    android:textAllCaps="false"
                    android:textSize="@dimen/button_14sp_720dp_12sp_600dp"
                    android:theme="@style/WepButtonWithMarigin" />
            </LinearLayout>
        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>
